--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/destiny
 spring.datasource.username=root
 spring.datasource.password=Mandalorian(7)
+bungie.url=https://www.bungie.net/Platform/Destiny2/
